@@ -19,6 +19,7 @@
         <rest-assured.version>4.3.3</rest-assured.version>
         <logback.version>1.2.3</logback.version>
         <awaitility.version>4.0.3</awaitility.version>
+        <argLine>--enable-preview</argLine>
     </properties>
     <dependencies>
         <dependency>
@@ -74,6 +75,18 @@
             <version>${awaitility.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.ninja-squad</groupId>
+            <artifactId>DbSetup</artifactId>
+            <version>2.1.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.19</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -91,6 +104,13 @@
                 <configuration>
                     <!-- This project contains only tests and should not deploy any artifact -->
                     <skip>true</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>${argLine}</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
